# Masters-s-project

./: .gitignore  .gitlab-ci.yml  .notes.txt.swp  Dockerfile  MAGISTERKA PRACA.txt  Pawel_Witala_Praca magisterska.docx  README.md  api-key.txt  notes.txt  notes.txt.save  pyproject.toml  test_response.py  ~$wel_Witala_Praca magisterska.docx
The-written-part-of-the-project/: Pawel_Witala_Praca magisterska.docx
air_poll_venv/: tk_test.py
air_poll_venv/.devcontainer/: devcontainer.json
air_poll_venv/linux/: requirements.txt
air_poll_venv/windows/Scripts/: activate  activate.bat
app_code/: api-key.txt  api_response.py  app.py  db_connect.py  db_control_panel.py  help_api_response.py  main_gui.py  notes.txt  pytest.py  test_db_connect.py
app_code/archieve_data/: api_response.py  db_connect.py  pytest.py
app_code/notepad/: api-key.txt
masters_project/: air_data_plot.csv  main.py  main.qss  main_plot.py  plot_data.py  test_time.py
masters_project/database/: db_connect.py  db_control_panel.py  respone.py  response.py
masters_project/docker_container/: create_postgres_container.sh
masters_project/machine_learning/: notebook_1.ipynb  notebook_2.ipynb  notebook_3.ipynb  prediction.ipynb
masters_project/machine_learning/data_analysis/: air_pollution_first_analysis.ipynb  air_pollution_time_frame_analysis.ipynb  months_describe.ipynb  time_frame_analysis.ipynb
masters_project/wind_data/: main_wind.ino
sample/notes/: df_describe.txt  sources.txt  sources.txt.save
tests/: test_db_connection_nok.py  test_db_connection_ok.py  test_first.py
(+136 files in other folders)
